--- a/Quarto/MainWindow.xaml
+++ b/Quarto/MainWindow.xaml
@@ -2,23 +2,27 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:qc="clr-namespace:Quarto"
-        Title="Quarto" Height="369" Width="932">
+        Title="Quarto" Height="369" Width="932" WindowState="Normal" WindowStyle="SingleBorderWindow" FontFamily="Lao UI">
     
     <Grid Width="900" Height="322">
         <Grid.ColumnDefinitions>
             <ColumnDefinition MinWidth="300" Width="300" MaxWidth="300" />
-            <ColumnDefinition Width="178*" />
-            <ColumnDefinition Width="122*" />
+            <ColumnDefinition Width="300*" />
             <ColumnDefinition Width="300*" />
         </Grid.ColumnDefinitions>
         
         <Menu Height="22" HorizontalAlignment="Stretch" Name="MainMenu" VerticalAlignment="Top" Width="900" Grid.ColumnSpan="4">
-            <MenuItem Header="Game">
-                <MenuItem Header="New Game" Click="MenuItem_Click" />
+            <MenuItem Header="Game" FontFamily="Lao UI">
+                <MenuItem Header="New Game">
+                    <MenuItem Header="PvP" Name="PvPMenuItem"  Click="PlayerVsPlayer_Click" />
+                    <MenuItem Header="PvC" Name="PvCMenuItem" Click="PlayerVsCpu_Click" />
+                    <MenuItem Header="CvP" Name="CvPMenuItem" Click="CpuVsPlayer_Click" />
+                </MenuItem>
+                <MenuItem Header="Full Screen" Name="FullScreenMenuItem" Click="FullScreenMenuItem_Click" />
             </MenuItem>
             <MenuItem Header="Help">
-                <MenuItem Header="Rules" />
-                <MenuItem Header="About" />
+                <MenuItem Header="Rules" Name="RulesMenuItem"/>
+                <MenuItem Header="About" Name="AboutMenuItem"/>
             </MenuItem>
         </Menu>
         <ContentControl BorderBrush="Black" BorderThickness="1,1,1,1" Margin="0,22,0,0">
@@ -35,25 +39,25 @@
                     <ColumnDefinition MaxWidth="75" MinWidth="75" Width="75" />
                     <ColumnDefinition MaxWidth="75" MinWidth="75" Width="75" />
                 </Grid.ColumnDefinitions>
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Width="73" Height="73" Margin="1" Grid.Row="0" Grid.Column="0"></Border>
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="0" Grid.Column="1"></Border>
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="0" Grid.Column="2"></Border>
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="0" Grid.Column="3"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Width="73" Height="73" Margin="1" Grid.Row="0" Grid.Column="0" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="0" Grid.Column="1" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="0" Grid.Column="2" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="0" Grid.Column="3" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
 
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Width="73" Height="73" Margin="1" Grid.Row="1" Grid.Column="0"></Border>
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="1" Grid.Column="1"></Border>
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="1" Grid.Column="2"></Border>
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="1" Grid.Column="3"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Width="73" Height="73" Margin="1" Grid.Row="1" Grid.Column="0" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="1" Grid.Column="1" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="1" Grid.Column="2" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="1" Grid.Column="3" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
 
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Width="73" Height="73" Margin="1" Grid.Row="2" Grid.Column="0"></Border>
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="2" Grid.Column="1"></Border>
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="2" Grid.Column="2"></Border>
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="2" Grid.Column="3"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Width="73" Height="73" Margin="1" Grid.Row="2" Grid.Column="0" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="2" Grid.Column="1" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="2" Grid.Column="2" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="2" Grid.Column="3" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
 
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Width="73" Height="73" Margin="1" Grid.Row="3" Grid.Column="0"></Border>
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="3" Grid.Column="1"></Border>
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="3" Grid.Column="2"></Border>
-                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="3" Grid.Column="3"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Width="73" Height="73" Margin="1" Grid.Row="3" Grid.Column="0" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="3" Grid.Column="1" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="3" Grid.Column="2" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
+                <Border Background="#FFEEEEEE" BorderThickness="2" CornerRadius="35" Height="73" Width="73" Margin="1" Grid.Row="3" Grid.Column="3" MouseEnter="CircleBorder_MouseEnter" MouseLeave="CircleBorder_MouseLeave" MouseUp="CircleBorder_MouseUp"></Border>
             </Grid>
         </ContentControl>
 
@@ -74,10 +78,11 @@
             </Grid>
         </ContentControl>
 
-        <Button Content="Quarto!" Grid.Column="1" Height="75" HorizontalAlignment="Left" Margin="47,106,0,0" Name="SayQuartoButton" VerticalAlignment="Top" Width="118" FontFamily="Lao UI" FontSize="16" FontStretch="Normal" Click="SayQuartoButton_Click" />
-        <Border BorderBrush="#FFCCCCCC" BorderThickness="2" CornerRadius="5" Margin="5,106,40,141" Grid.Column="2" Background="#FFCEFFD8" x:Name="FigureToPlaceBorder">
+        <Button Content="Quarto!" Grid.Column="1" Height="75" HorizontalAlignment="Left" Margin="68,160,0,0" Name="SayQuartoButton" VerticalAlignment="Top" Width="75" FontFamily="Lao UI" FontSize="13" FontStretch="Normal" Click="SayQuartoButton_Click" />
+        <Border BorderBrush="#FFCCCCCC" BorderThickness="2" CornerRadius="5" Margin="68,71,157,176" Grid.Column="1" Background="#FFEEEEEE" x:Name="FigureToPlaceBorder" Width="75" Height="75">
         </Border>
-        <Rectangle Grid.Column="2" Height="35" HorizontalAlignment="Left" Margin="5,56,0,0" Name="TurnIndicatorRectangle" Stroke="#FFCCCCCC" VerticalAlignment="Top" Width="75" Fill="#FFE85C5C" StrokeThickness="2" RadiusX="5" RadiusY="16" />
-        <Label Content="Active Player:" Grid.Column="1" Height="35" HorizontalAlignment="Left" Margin="47,56,0,0" Name="label1" VerticalAlignment="Top" Width="118" FontFamily="Lao UI" FontSize="16" />
+        <Rectangle Grid.Column="1" Height="75" HorizontalAlignment="Left" Margin="157,71,0,0" Name="TurnIndicatorRectangle" Stroke="#FFCCCCCC" VerticalAlignment="Top" Width="75" Fill="#FFE85C5C" StrokeThickness="2" RadiusX="5" RadiusY="5" />
+        <Button Content="Offer a Tie" Grid.Column="1" Height="31" HorizontalAlignment="Left" Margin="157,160,0,0" Name="TieOfferButton" VerticalAlignment="Top" Width="75" FontSize="13" Click="TieOfferButton_Click" />
+        <Button Content="Surrender" Height="31" HorizontalAlignment="Left" Margin="157,204,0,0" Name="SurrenderButton" VerticalAlignment="Top" Width="75" FontSize="13" Grid.Column="1" Click="SurrenderButton_Click" />
     </Grid>
 </Window>
