--- a/Quarto/MainWindow.xaml
+++ b/Quarto/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:qc="clr-namespace:Quarto"
-        Title="Quarto" Height="369" Width="932" WindowState="Normal" WindowStyle="SingleBorderWindow" FontFamily="Lao UI">
+        Title="Quarto" Height="369" Width="932" FontFamily="Lao UI" KeyUp="Window_KeyUp">
     
     <Grid Width="900" Height="322">
         <Grid.ColumnDefinitions>
@@ -12,18 +12,20 @@
         </Grid.ColumnDefinitions>
         
         <Menu Height="22" HorizontalAlignment="Stretch" Name="MainMenu" VerticalAlignment="Top" Width="900" Grid.ColumnSpan="4">
-            <MenuItem Header="Game" FontFamily="Lao UI">
-                <MenuItem Header="New Game">
+            <MenuItem Header="New Game" FontFamily="Lao UI">
                     <MenuItem Header="PvP" Name="PvPMenuItem"  Click="PlayerVsPlayer_Click" />
                     <MenuItem Header="PvC" Name="PvCMenuItem" Click="PlayerVsCpu_Click" />
                     <MenuItem Header="CvP" Name="CvPMenuItem" Click="CpuVsPlayer_Click" />
-                </MenuItem>
+            </MenuItem>
+            <MenuItem Header="View">
+                <MenuItem Header="Standard Pieces" Name="StandardPiecesMenuItem" Click="StandardPiecesMenuItem_Click" />
+                <MenuItem Header="Code Rectangles" Name="CodeRectanglesMenuItem" Click="CodeRectanglesMenuItem_Click" />
                 <MenuItem Header="Full Screen" Name="FullScreenMenuItem" Click="FullScreenMenuItem_Click" />
             </MenuItem>
             <MenuItem Header="Help">
-                <MenuItem Header="Rules" Name="RulesMenuItem"/>
-                <MenuItem Header="About" Name="AboutMenuItem"/>
+                <MenuItem Header="Rules" Name="RulesMenuItem" Click="RulesMenuItem_Click" />
             </MenuItem>
+            <MenuItem Header="About" Name="AboutMenuItem" Click="AboutMenuItem_Click" />
         </Menu>
         <ContentControl BorderBrush="Black" BorderThickness="1,1,1,1" Margin="0,22,0,0">
             <Grid Height="300" HorizontalAlignment="Left" Name="GameFieldGrid" VerticalAlignment="Top" Width="300" MaxWidth="300" MaxHeight="300" MinHeight="300" MinWidth="300" UseLayoutRounding="True" OverridesDefaultStyle="False">
