--- a/Quarto/MainWindow.xaml
+++ b/Quarto/MainWindow.xaml
@@ -104,6 +104,6 @@
         </Border>
         <Rectangle Grid.Column="1" Height="100" HorizontalAlignment="Left" Margin="161,120,0,0" Name="TurnIndicatorRectangle" Stroke="#FFCCCCCC" VerticalAlignment="Top" Width="100" Fill="#FFE85C5C" StrokeThickness="2" RadiusX="5" RadiusY="5" />
         <Button Content="Offer a Tie" Grid.Column="1" Height="43" HorizontalAlignment="Left" Margin="161,237,0,0" Name="TieOfferButton" VerticalAlignment="Top" Width="100" FontSize="13" Click="TieOfferButton_Click" />
-        <Button Content="Surrender" Height="43" HorizontalAlignment="Left" Margin="161,295,0,0" Name="SurrenderButton" VerticalAlignment="Top" Width="100" FontSize="13" Grid.Column="1" Click="SurrenderButton_Click" />
+        <Button Content="Surrender" HorizontalAlignment="Left" Margin="161,295,0,174" Name="SurrenderButton" Width="100" FontSize="13" Grid.Column="1" Click="SurrenderButton_Click" />
     </Grid>
 </Window>
