--- a/Quarto/MainWindow.xaml
+++ b/Quarto/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:qc="clr-namespace:Quarto"
-        Title="Quarto" Height="512" Width="1120" FontFamily="Lao UI" KeyUp="Window_KeyUp">
+        Title="Quarto" Height="512" Width="1120" FontFamily="Lao UI" KeyUp="Window_KeyUp" Icon="/Quarto;component/bin/Debug/Qr_logo.png">
 
     <Grid Width="1200" Height="512">
         <Grid.ColumnDefinitions>
@@ -22,9 +22,7 @@
                 <MenuItem Header="Code Rectangles" Name="CodeRectanglesMenuItem" Click="CodeRectanglesMenuItem_Click" />
                 <MenuItem Header="Full Screen" Name="FullScreenMenuItem" Click="FullScreenMenuItem_Click" />
             </MenuItem>
-            <MenuItem Header="Help">
-                <MenuItem Header="Rules" Name="RulesMenuItem" Click="RulesMenuItem_Click" />
-            </MenuItem>
+            <MenuItem Header="Help" Name="RulesMenuItem" Click="RulesMenuItem_Click" />
             <MenuItem Header="About" Name="AboutMenuItem" Click="AboutMenuItem_Click" />
         </Menu>
         <ContentControl BorderBrush="Black" BorderThickness="1,1,1,1" Margin="0,22,0,0">
@@ -105,5 +103,7 @@
         <Rectangle Grid.Column="1" Height="100" HorizontalAlignment="Left" Margin="161,120,0,0" Name="TurnIndicatorRectangle" Stroke="#FFCCCCCC" VerticalAlignment="Top" Width="100" Fill="#FFE85C5C" StrokeThickness="2" RadiusX="5" RadiusY="5" />
         <Button Content="Offer a Tie" Grid.Column="1" Height="43" HorizontalAlignment="Left" Margin="161,237,0,0" Name="TieOfferButton" VerticalAlignment="Top" Width="100" FontSize="13" Click="TieOfferButton_Click" />
         <Button Content="Surrender" HorizontalAlignment="Left" Margin="161,295,0,174" Name="SurrenderButton" Width="100" FontSize="13" Grid.Column="1" Click="SurrenderButton_Click" />
+        <ProgressBar Grid.Column="1" Height="28" HorizontalAlignment="Left" Margin="43,353,0,0" Name="OpponentThinkingProgressBar" VerticalAlignment="Top" Width="218" IsIndeterminate="True" Visibility="Hidden" />
+        <Label Content="The opponent is thinking..." Grid.Column="1" Height="28" HorizontalAlignment="Right" Margin="0,353,75,0" Name="OpponentThinkingLabel" VerticalAlignment="Top" Visibility="Hidden" />
     </Grid>
 </Window>
