--- a/Quarto/AboutWindow.xaml
+++ b/Quarto/AboutWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Quarto.AboutWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="About" Height="105" Width="300" FontFamily="Lao UI" ResizeMode="NoResize" ShowInTaskbar="False">
+        Title="About" Height="105" Width="300" FontFamily="Lao UI" ResizeMode="NoResize" ShowInTaskbar="False" Icon="/Quarto;component/Images/Qr_logo.ico">
     <Grid>
         <RichTextBox Name="AboutTextBlock">
             <FlowDocument>
