--- a/Quarto/MainWindow.xaml
+++ b/Quarto/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:qc="clr-namespace:Quarto"
-        Title="Quarto" Height="512" Width="1120" FontFamily="Lao UI" KeyUp="Window_KeyUp" Icon="/Quarto;component/bin/Debug/Qr_logo.png">
+        Title="Quarto" Height="512" Width="1120" FontFamily="Lao UI" KeyUp="Window_KeyUp" Icon="/Quarto;component/Images/Qr_logo.ico">
 
     <Grid Width="1200" Height="512">
         <Grid.ColumnDefinitions>
