--- a/Quarto/RulesWindow.xaml
+++ b/Quarto/RulesWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Quarto.RulesWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Rules" Height="347" Width="499" ResizeMode="NoResize" ShowInTaskbar="False" FontFamily="Lao UI">
+        Title="Rules" Height="347" Width="499" ResizeMode="NoResize" ShowInTaskbar="False" FontFamily="Lao UI" Icon="/Quarto;component/Images/Qr_logo.ico">
     <Grid>
         <RichTextBox IsDocumentEnabled="True" IsReadOnly="True" >
             <FlowDocument TextAlignment="Justify">
